# MICRO_VEGITATION_BACKEND

./: .gitignore  README.md  app.py  database.py  main.py  pyproject.toml  test.db
core/: config.py
crud/: product.py
models/: product.py
routers/: product_router.py
schemas/: product.py
services/: files.py
